--- a/src/Makefile
+++ b/src/Makefile
@@ -46,8 +46,9 @@ CFLAGS+=-Wshadow
 CFLAGS+=-I$(GHIDRA_DECOMPILER)
 CFLAGS+=-I.
 
-# CFLAGS+=-g
-CXXFLAGS+=-g
+CFLAGS+=-g -ggdb
+LDFLAGS+=-g -ggdb
+CXXFLAGS+=-g -ggdb
 
 CXXFLAGS+=-std=c++11
 CFLAGS+=$(R2_CFLAGS)
