Use suffix in dependabot commit messages

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,7 @@ updates:
     schedule:
       interval: "weekly"
     commit-message:
-      prefix: "##build "
-      prefix-development: "##build "
+      suffix: " ##ci"
+      suffix-development: " ##ci"
     labels:
       - buildsystem
