Make meson build

--- a/meson.build
+++ b/meson.build
@@ -111,6 +111,7 @@ ghidra_decompiler_sources = [
   'ghidra-native/src/decompiler/float.cc',
   'ghidra-native/src/decompiler/flow.cc',
   'ghidra-native/src/decompiler/fspec.cc',
+  'ghidra-native/src/decompiler/multiprecision.cc',
   'ghidra-native/src/decompiler/funcdata.cc',
   'ghidra-native/src/decompiler/funcdata_block.cc',
   'ghidra-native/src/decompiler/funcdata_op.cc',
@@ -157,6 +158,8 @@ ghidra_decompiler_sources = [
   'ghidra-native/src/decompiler/raw_arch.cc',
   'ghidra-native/src/decompiler/ruleaction.cc',
   'ghidra-native/src/decompiler/rulecompile.cc',
+  'ghidra-native/src/decompiler/compression.cc',
+  'ghidra-native/src/decompiler/slaformat.cc',
   'ghidra-native/src/decompiler/semantics.cc',
   'ghidra-native/src/decompiler/sleigh.cc',
   'ghidra-native/src/decompiler/sleigh_arch.cc',
@@ -172,6 +175,7 @@ ghidra_decompiler_sources = [
   'ghidra-native/src/decompiler/space.cc',
   'ghidra-native/src/decompiler/string_ghidra.cc',
   'ghidra-native/src/decompiler/stringmanage.cc',
+  'ghidra-native/src/decompiler/modelrules.cc',
   'ghidra-native/src/decompiler/subflow.cc',
   'ghidra-native/src/decompiler/transform.cc',
   'ghidra-native/src/decompiler/translate.cc',
