--- a/src/Makefile
+++ b/src/Makefile
@@ -84,7 +84,7 @@ $(R2G_CORE_PLUGIN): $(deps)
 
 $(R2G_ANAL_PLUGIN): $(deps)
 	$(CXX) -shared $(GHIDRA_OBJS) $(PUGIXML_OBJS) anal_ghidra.o anal_ghidra_plugin.o \
-		$(R2_LDFLAGS) $(LDFLAGS) $(CXXFLAGS) -o $@ $(R2GHIDRA_OBJS)
+		 $(R2GHIDRA_OBJS) $(R2_LDFLAGS) $(LDFLAGS) $(CXXFLAGS) -o $@
 
 ifneq (,$(wildcard /usr/bin/codesign))
 sign macsign:
