--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -200,6 +200,7 @@ jobs:
       shell: bash
       run: |
         pip install ninja meson wget
+        nuget install zlib_static
     - name: install r2
       shell: bash
       run: |
