--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,6 +141,12 @@ jobs:
   macos-pkg:
     # The type of runner that the job will run on
     runs-on: macos-latest
+    # Build for both architectures
+    strategy:
+      matrix:
+        arch: [x86_64, arm64]
+    env:
+      ARCH: ${{ matrix.arch }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -149,15 +155,23 @@ jobs:
     - name: Cloning radare2
       run: git clone --depth=1 --branch "${R2V}" https://github.com/radareorg/radare2
     - name: Building Radare2 pkg for macOS
-      run: make -C radare2/dist/macos
+      run: |
+        echo "Building radare2 for architecture: $ARCH"
+        make -C radare2/dist/macos ARCH=$ARCH
     - name: Install radare2 Package
       run: sudo installer -pkg radare2/dist/macos/*.pkg -target /
     - name: Building r2ghidra with acr
-      run: ./preconfigure && ./configure && make -j4 && make user-install
+      run: |
+        ./preconfigure
+        ./configure
+        make -j4
+        make user-install
     - name: Packaging r2ghidra
       run: |
-        make -C dist/macos
-        make install DESTDIR=/tmp/r2ghidra && cd /tmp/r2ghidra && tar czvf ../r2ghidra-macos.tar.gz *
+        make -C dist/macos ARCH=$ARCH
+        make install DESTDIR=/tmp/r2ghidra
+        cd /tmp/r2ghidra
+        tar czvf ../r2ghidra-macos-${ARCH}.tar.gz *
     - name: Testing r2ghidra
       run: |
         r2 -qc 'af;pdg' test/bins/rec | tee a.txt
@@ -165,9 +179,11 @@ jobs:
     - name: Uploading artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: macos-pkg
-        path: dist/macos/*.zip
-        #path: radare2/dist/macos/*.pkg src/*.dylib /tmp/r2ghidra-macos.tar.gz dist/macos/*.zip
+        name: macos-pkg-${{ env.ARCH }}
+        path: |
+          radare2/dist/macos/*.pkg
+          dist/macos/*.zip
+          /tmp/r2ghidra-macos-${{ env.ARCH }}.tar.gz
 
   w64:
     runs-on: windows-latest
