Add some flags (ehhh msvc...)

--- a/meson.build
+++ b/meson.build
@@ -47,6 +47,8 @@ if cpp.get_id() == 'msvc'
     'radare2/include/libr/sdb',
   ]
   add_global_arguments('-D_WINDOWS', language:'cpp')
+  add_global_arguments('-D_WIN32', language:'cpp')
+  add_global_arguments('-DZLIB_WINAPI', language:'cpp')
   r2libdir = [
     meson.current_source_dir() + '\\radare2\\lib',
     'C:\\radare2\\lib'
