--- a/subprojects/packagefiles/ghidra-native/meson.build
+++ b/subprojects/packagefiles/ghidra-native/meson.build
@@ -1,121 +1,132 @@
-project('ghidra-native', 'c', meson_version : '>=0.60.0', version : '7c1f8b6975a685f785d4801b794715d9a6a55b19')
+project('ghidra-native', 'cpp', meson_version : '>=0.60.0', version : '7c1f8b6975a685f785d4801b794715d9a6a55b19')
 
 sources = [
-  'ghidra-native/src/decompiler/action.cc',
-  'ghidra-native/src/decompiler/address.cc',
-  'ghidra-native/src/decompiler/architecture.cc',
-  # 'ghidra-native/src/decompiler/bfd_arch.cc',
-  'ghidra-native/src/decompiler/block.cc',
-  'ghidra-native/src/decompiler/blockaction.cc',
-  'ghidra-native/src/decompiler/callgraph.cc',
-  'ghidra-native/src/decompiler/capability.cc',
-  'ghidra-native/src/decompiler/cast.cc',
-  # 'ghidra-native/src/decompiler/codedata.cc',
-  'ghidra-native/src/decompiler/comment.cc',
-  'ghidra-native/src/decompiler/comment_ghidra.cc',
-  'ghidra-native/src/decompiler/condexe.cc',
-  # 'ghidra-native/src/decompiler/consolemain.cc',
-  'ghidra-native/src/decompiler/context.cc',
-  'ghidra-native/src/decompiler/coreaction.cc',
-  'ghidra-native/src/decompiler/cover.cc',
-  'ghidra-native/src/decompiler/cpool.cc',
-  'ghidra-native/src/decompiler/cpool_ghidra.cc',
-  'ghidra-native/src/decompiler/crc32.cc',
-  'ghidra-native/src/decompiler/database.cc',
-  'ghidra-native/src/decompiler/database_ghidra.cc',
-  'ghidra-native/src/decompiler/double.cc',
-  'ghidra-native/src/decompiler/dynamic.cc',
-  'ghidra-native/src/decompiler/emulate.cc',
-  'ghidra-native/src/decompiler/emulateutil.cc',
-  'ghidra-native/src/decompiler/filemanage.cc',
-  'ghidra-native/src/decompiler/float.cc',
-  'ghidra-native/src/decompiler/flow.cc',
-  'ghidra-native/src/decompiler/fspec.cc',
-  'ghidra-native/src/decompiler/multiprecision.cc',
-  'ghidra-native/src/decompiler/funcdata.cc',
-  'ghidra-native/src/decompiler/funcdata_block.cc',
-  'ghidra-native/src/decompiler/funcdata_op.cc',
-  'ghidra-native/src/decompiler/funcdata_varnode.cc',
-  'ghidra-native/src/decompiler/unionresolve.cc',
-  'ghidra-native/src/decompiler/ghidra_arch.cc',
-  'ghidra-native/src/decompiler/ghidra_context.cc',
-  # 'ghidra-native/src/decompiler/ghidra_process.cc',
-  'ghidra-native/src/decompiler/ghidra_translate.cc',
-  'ghidra-native/src/decompiler/globalcontext.cc',
-  'ghidra-native/src/decompiler/grammar.cc',
-  'ghidra-native/src/decompiler/graph.cc',
-  'ghidra-native/src/decompiler/heritage.cc',
-  'ghidra-native/src/decompiler/ifacedecomp.cc',
-  'ghidra-native/src/decompiler/testfunction.cc',
-  'ghidra-native/src/decompiler/ifaceterm.cc',
-  'ghidra-native/src/decompiler/inject_ghidra.cc',
-  'ghidra-native/src/decompiler/inject_sleigh.cc',
-  'ghidra-native/src/decompiler/interface.cc',
-  'ghidra-native/src/decompiler/jumptable.cc',
-  'ghidra-native/src/decompiler/libdecomp.cc',
-  'ghidra-native/src/decompiler/loadimage.cc',
-  # 'ghidra-native/src/decompiler/loadimage_bfd.cc',
-  'ghidra-native/src/decompiler/loadimage_ghidra.cc',
-  'ghidra-native/src/decompiler/loadimage_xml.cc',
-  'ghidra-native/src/decompiler/memstate.cc',
-  'ghidra-native/src/decompiler/merge.cc',
-  'ghidra-native/src/decompiler/op.cc',
-  'ghidra-native/src/decompiler/opbehavior.cc',
-  'ghidra-native/src/decompiler/opcodes.cc',
-  'ghidra-native/src/decompiler/options.cc',
-  'ghidra-native/src/decompiler/override.cc',
-  'ghidra-native/src/decompiler/paramid.cc',
-  'ghidra-native/src/decompiler/pcodecompile.cc',
-  'ghidra-native/src/decompiler/pcodeinject.cc',
-  'ghidra-native/src/decompiler/pcodeparse.cc',
-  'ghidra-native/src/decompiler/pcoderaw.cc',
-  'ghidra-native/src/decompiler/prefersplit.cc',
-  'ghidra-native/src/decompiler/prettyprint.cc',
-  'ghidra-native/src/decompiler/printc.cc',
-  'ghidra-native/src/decompiler/printjava.cc',
-  'ghidra-native/src/decompiler/printlanguage.cc',
-  'ghidra-native/src/decompiler/rangeutil.cc',
-  'ghidra-native/src/decompiler/raw_arch.cc',
-  'ghidra-native/src/decompiler/ruleaction.cc',
-  'ghidra-native/src/decompiler/rulecompile.cc',
-  'ghidra-native/src/decompiler/compression.cc',
-  'ghidra-native/src/decompiler/slaformat.cc',
-  'ghidra-native/src/decompiler/semantics.cc',
-  'ghidra-native/src/decompiler/sleigh.cc',
-  'ghidra-native/src/decompiler/sleigh_arch.cc',
-  'ghidra-native/src/decompiler/sleighbase.cc',
-  # 'ghidra-native/src/decompiler/sleighexample.cc',
-  # 'ghidra-native/src/decompiler/slgh_compile.cc',
-  # 'ghidra-native/src/decompiler/slghparse.cc',
-  'ghidra-native/src/decompiler/slghpatexpress.cc',
-  'ghidra-native/src/decompiler/slghpattern.cc',
-  # 'ghidra-native/src/decompiler/slghscan.cc',
-  'ghidra-native/src/decompiler/slghsymbol.cc',
-  'ghidra-native/src/decompiler/marshal.cc',
-  'ghidra-native/src/decompiler/space.cc',
-  'ghidra-native/src/decompiler/string_ghidra.cc',
-  'ghidra-native/src/decompiler/stringmanage.cc',
-  'ghidra-native/src/decompiler/modelrules.cc',
-  'ghidra-native/src/decompiler/subflow.cc',
-  'ghidra-native/src/decompiler/transform.cc',
-  'ghidra-native/src/decompiler/translate.cc',
-  'ghidra-native/src/decompiler/type.cc',
-  'ghidra-native/src/decompiler/typegrp_ghidra.cc',
-  'ghidra-native/src/decompiler/typeop.cc',
-  'ghidra-native/src/decompiler/unify.cc',
-  'ghidra-native/src/decompiler/userop.cc',
-  'ghidra-native/src/decompiler/variable.cc',
-  'ghidra-native/src/decompiler/varmap.cc',
-  'ghidra-native/src/decompiler/varnode.cc',
-  'ghidra-native/src/decompiler/xml.cc',
-  'ghidra-native/src/decompiler/xml_arch.cc',
+  'src/decompiler/action.cc',
+  'src/decompiler/address.cc',
+  'src/decompiler/architecture.cc',
+  #e/src/decompiler/bfd_arch.cc',
+  'src/decompiler/block.cc',
+  'src/decompiler/blockaction.cc',
+  'src/decompiler/callgraph.cc',
+  'src/decompiler/capability.cc',
+  'src/decompiler/cast.cc',
+  #e/src/decompiler/codedata.cc',
+  'src/decompiler/comment.cc',
+  'src/decompiler/comment_ghidra.cc',
+  'src/decompiler/condexe.cc',
+  #e/src/decompiler/consolemain.cc',
+  'src/decompiler/context.cc',
+  'src/decompiler/coreaction.cc',
+  'src/decompiler/cover.cc',
+  'src/decompiler/cpool.cc',
+  'src/decompiler/cpool_ghidra.cc',
+  'src/decompiler/crc32.cc',
+  'src/decompiler/database.cc',
+  'src/decompiler/database_ghidra.cc',
+  'src/decompiler/double.cc',
+  'src/decompiler/dynamic.cc',
+  'src/decompiler/emulate.cc',
+  'src/decompiler/emulateutil.cc',
+  'src/decompiler/filemanage.cc',
+  'src/decompiler/float.cc',
+  'src/decompiler/flow.cc',
+  'src/decompiler/fspec.cc',
+  'src/decompiler/multiprecision.cc',
+  'src/decompiler/funcdata.cc',
+  'src/decompiler/funcdata_block.cc',
+  'src/decompiler/funcdata_op.cc',
+  'src/decompiler/funcdata_varnode.cc',
+  'src/decompiler/unionresolve.cc',
+  'src/decompiler/ghidra_arch.cc',
+  'src/decompiler/ghidra_context.cc',
+  #e/src/decompiler/ghidra_process.cc',
+  'src/decompiler/ghidra_translate.cc',
+  'src/decompiler/globalcontext.cc',
+  'src/decompiler/grammar.cc',
+  'src/decompiler/graph.cc',
+  'src/decompiler/heritage.cc',
+  'src/decompiler/ifacedecomp.cc',
+  'src/decompiler/testfunction.cc',
+  'src/decompiler/ifaceterm.cc',
+  'src/decompiler/inject_ghidra.cc',
+  'src/decompiler/inject_sleigh.cc',
+  'src/decompiler/interface.cc',
+  'src/decompiler/jumptable.cc',
+  'src/decompiler/libdecomp.cc',
+  'src/decompiler/loadimage.cc',
+  #e/src/decompiler/loadimage_bfd.cc',
+  'src/decompiler/loadimage_ghidra.cc',
+  'src/decompiler/loadimage_xml.cc',
+  'src/decompiler/memstate.cc',
+  'src/decompiler/merge.cc',
+  'src/decompiler/op.cc',
+  'src/decompiler/opbehavior.cc',
+  'src/decompiler/opcodes.cc',
+  'src/decompiler/options.cc',
+  'src/decompiler/override.cc',
+  'src/decompiler/paramid.cc',
+  'src/decompiler/pcodecompile.cc',
+  'src/decompiler/pcodeinject.cc',
+  'src/decompiler/pcodeparse.cc',
+  'src/decompiler/pcoderaw.cc',
+  'src/decompiler/prefersplit.cc',
+  'src/decompiler/prettyprint.cc',
+  'src/decompiler/printc.cc',
+  'src/decompiler/printjava.cc',
+  'src/decompiler/printlanguage.cc',
+  'src/decompiler/rangeutil.cc',
+  'src/decompiler/raw_arch.cc',
+  'src/decompiler/ruleaction.cc',
+  'src/decompiler/rulecompile.cc',
+  'src/decompiler/compression.cc',
+  'src/decompiler/slaformat.cc',
+  'src/decompiler/semantics.cc',
+  'src/decompiler/sleigh.cc',
+  'src/decompiler/sleigh_arch.cc',
+  'src/decompiler/sleighbase.cc',
+  #e/src/decompiler/sleighexample.cc',
+  #e/src/decompiler/slgh_compile.cc',
+  #e/src/decompiler/slghparse.cc',
+  'src/decompiler/slghpatexpress.cc',
+  'src/decompiler/slghpattern.cc',
+  #e/src/decompiler/slghscan.cc',
+  'src/decompiler/slghsymbol.cc',
+  'src/decompiler/marshal.cc',
+  'src/decompiler/space.cc',
+  'src/decompiler/string_ghidra.cc',
+  'src/decompiler/stringmanage.cc',
+  'src/decompiler/modelrules.cc',
+  'src/decompiler/subflow.cc',
+  'src/decompiler/transform.cc',
+  'src/decompiler/translate.cc',
+  'src/decompiler/type.cc',
+  'src/decompiler/typegrp_ghidra.cc',
+  'src/decompiler/typeop.cc',
+  'src/decompiler/unify.cc',
+  'src/decompiler/userop.cc',
+  'src/decompiler/variable.cc',
+  'src/decompiler/varmap.cc',
+  'src/decompiler/varnode.cc',
+  'src/decompiler/xml.cc',
+  'src/decompiler/xml_arch.cc',
 ]
 
 slgh_sources = [
-  'ghidra-native/src/decompiler/slgh_compile.cc',
-  'ghidra-native/src/decompiler/slghparse.cc',
-  'ghidra-native/src/decompiler/slghscan.cc',
+  'src/decompiler/slgh_compile.cc',
+  'src/decompiler/slghparse.cc',
+  'src/decompiler/slghscan.cc',
 ]
 
-incs = include_directories('./src/decompiler')
+incs = include_directories('src/decompiler')
+
+ghidra_static = static_library(
+  'ghidra', sources,
+  include_directories: incs
+)
+
+slgh_static = static_library(
+  'slgh', sources + slgh_sources,
+  include_directories: incs
+)
+
 
