--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,10 @@ ghidra/flex/
 .ccls-cache
 .gdb_history
 dist/artifacts
+
+
+ghidra-processors.txt
+ghidra/sleighc
+
+subprojects/ghidra-native
+subprojects/zlib
