--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - master
+    tags:
+      - '[0-9]*.*.*'
   pull_request:
 
 jobs:
@@ -218,7 +220,8 @@ jobs:
         path: destdir/r2ghidra-w64.zip
 
   check_release:
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+    # Run on tag pushes; filter tags starting with a digit in the release step
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
     outputs:
       is_release: ${{ steps.release.outputs.is }}
       tag_name: ${{ steps.release.outputs.tag }}
@@ -236,7 +239,8 @@ jobs:
         run: git describe --exact-match --tags ${{ github.sha }} | awk 'BEGIN{tag="-";r="no"}/^[0-9]+\.[0-9]+/{tag=$0;r="yes"};END{print "is="r;print "tag="tag}' >> ${GITHUB_OUTPUT}
         id: release
   release:
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' && needs.check_release.outputs.is_release == 'yes' }}
+    # Only create a release for numeric tags that passed check_release
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && needs.check_release.outputs.is_release == 'yes' }}
     needs:
       - check_release
     runs-on: ubuntu-22.04
