--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -312,15 +312,15 @@ jobs:
           asset_path: dist/artifacts/tarball/r2ghidra-${{ steps.r2gv.outputs.branch }}.tar.xz
           asset_name: r2ghidra-${{ steps.r2gv.outputs.branch }}.tar.xz
           asset_content_type: application/x-txz
-      - name: Upload asset for Windows (w64)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/artifacts/w64/r2ghidra-w64.zip
-          asset_name: r2ghidra-${{ steps.r2gv.outputs.branch }}-w64.zip
-          asset_content_type: application/zip
+#      - name: Upload asset for Windows (w64)
+#        uses: actions/upload-release-asset@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}
+#          asset_path: dist/artifacts/w64/r2ghidra-w64.zip
+#          asset_name: r2ghidra-${{ steps.r2gv.outputs.branch }}-w64.zip
+#          asset_content_type: application/zip
       - name: Upload asset for Sleigh files
         uses: actions/upload-release-asset@v1
         env:
