--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -255,78 +255,20 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: dist/artifacts
-      - name: Create GitHub release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Create GitHub release and upload assets
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ needs.check_release.outputs.tag_name }}
-          release_name: ${{ steps.r2gv.outputs.branch }}
+          name: ${{ steps.r2gv.outputs.branch }}
           body_path: ./RELEASE_NOTES.md
           draft: false
           prerelease: false
-      - name: Upload asset for Linux
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/artifacts/linux-deb/r2ghidra_${{ steps.r2gv.outputs.branch }}_amd64.deb
-          asset_name: r2ghidra_${{ steps.r2gv.outputs.branch }}_amd64.deb
-          asset_content_type: application/vnd.debian.binary-package
-      - name: Upload asset for macOS (x86_64)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/artifacts/macos-pkg-x86_64/r2ghidra-${{ steps.r2gv.outputs.branch }}-macos-x86_64.zip
-          asset_name: r2ghidra-${{ steps.r2gv.outputs.branch }}-macos-x86_64.zip
-          asset_content_type: application/zip
-
-      - name: Upload asset for macOS (arm64)
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/artifacts/macos-pkg-arm64/r2ghidra-${{ steps.r2gv.outputs.branch }}-macos-arm64.zip
-          asset_name: r2ghidra-${{ steps.r2gv.outputs.branch }}-macos-arm64.zip
-          asset_content_type: application/zip
-      - name: Upload zip
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/artifacts/tarball/r2ghidra-${{ steps.r2gv.outputs.branch }}.zip
-          asset_name: r2ghidra-${{ steps.r2gv.outputs.branch }}.zip
-          asset_content_type: application/zip
-      - name: Upload tarball
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/artifacts/tarball/r2ghidra-${{ steps.r2gv.outputs.branch }}.tar.xz
-          asset_name: r2ghidra-${{ steps.r2gv.outputs.branch }}.tar.xz
-          asset_content_type: application/x-txz
-#      - name: Upload asset for Windows (w64)
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ steps.create_release.outputs.upload_url }}
-#          asset_path: dist/artifacts/w64/r2ghidra-w64.zip
-#          asset_name: r2ghidra-${{ steps.r2gv.outputs.branch }}-w64.zip
-#          asset_content_type: application/zip
-      - name: Upload asset for Sleigh files
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: dist/artifacts/linux-acr-ok/r2ghidra_sleigh-${{ steps.r2gv.outputs.branch }}.zip
-          asset_name: r2ghidra_sleigh-${{ steps.r2gv.outputs.branch }}.zip
-          asset_content_type: application/zip
+          files: |
+            dist/artifacts/linux-deb/r2ghidra_${{ steps.r2gv.outputs.branch }}_amd64.deb
+            dist/artifacts/macos-pkg-x86_64/r2ghidra-${{ steps.r2gv.outputs.branch }}-macos-x86_64.zip
+            dist/artifacts/macos-pkg-arm64/r2ghidra-${{ steps.r2gv.outputs.branch }}-macos-arm64.zip
+            dist/artifacts/tarball/r2ghidra-${{ steps.r2gv.outputs.branch }}.zip
+            dist/artifacts/tarball/r2ghidra-${{ steps.r2gv.outputs.branch }}.tar.xz
+            dist/artifacts/linux-acr-ok/r2ghidra_sleigh-${{ steps.r2gv.outputs.branch }}.zip
