--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,6 +203,7 @@ jobs:
         python -m wget https://github.com/radareorg/radare2/releases/download/${{env.R2V}}/radare2-${{env.R2V}}-w64.zip -o r2.zip
         python3 -m zipfile -e r2.zip .
         mv radare2-${{env.R2V}}-w64 radare2
+        cp -f radare2/include/libr/r_util/r_event.h radare2/include/libr/r_event.h
         pwd
     - name: batmake
       shell: cmd
