Add Sleigh architecture file generation to Meson build
Bring Meson/Ninja build closer to parity with ACR/Make by implementing
compilation of .slaspec files and installation of architecture specifications.

One caveat is that the files are compiled in the source tree rather than in the
build directory, and that they are compiled during installation rather than
during build. Not sure how to address this without having to explicitly specify
every single generated file.

Disclaimer: Produced with assistance of Claude Code.

--- a/meson.build
+++ b/meson.build
@@ -122,3 +122,6 @@ r2ghidra_core_plugin = shared_library('core_r2ghidra',
   install: true,
   install_dir: r2_plugdir
 )
+
+sleighc_exe = ghidra.get_variable('sleighc_exe')
+subdir('ghidra')
