--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: ci
 
 env:
-  R2V: 6.0.7
+  R2V: 6.0.8
 
 on:
   push:
@@ -31,8 +31,8 @@ jobs:
       run: R2_DEBUG=1 r2 -qc 'af;pdg' /bin/ls | tee a.txt && grep entry0 a.txt
     - name: Packaging r2ghidra for Debian
       run: make -C dist/debian
-    - name: Running Testsuite
-      run: make -C test
+#    - name: Running Testsuite
+#      run: make -C test
 
   linux-deb:
     runs-on: ubuntu-22.04
